feat(pm286): update stac to 1.0.0 version REGARDS-286